--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p id="text">Breathe In!</p>
 
       <div class="pointer-container">
-        <span class="ponter"></span>
+        <span class="pointer"></span>
       </div>
 
       <div class="gradient-circle"></div>
